--- a/index.html
+++ b/index.html
@@ -3363,44 +3363,256 @@
 		}
 
         // ====== FONCTIONS DU THÈME ======
-        const THEME_KEY = 'flashcards_theme_v2';
+		const THEME_KEY = 'flashcards_theme_v2';
 
-        function setVar(name, value) {
-            document.documentElement.style.setProperty(name, value);
-        }
+		// Liste des variables que tu autorises à modifier dans l'UI
+		const THEME_VARS = [
+			{ group: "primary",  label: "Primaire",           varName: "--primary" },
+			{ group: "primary",  label: "Secondaire",         varName: "--primary-2" },
+			{ group: "primary",  label: "Accent",             varName: "--accent" },
+			{ group: "primary",  label: "Accent 2",           varName: "--accent-2" },
 
-        function getComputedVar(name) {
-            return getComputedStyle(document.documentElement).getPropertyValue(name).trim();
-        }
+			{ group: "ui",       label: "Fond (gradient 1)",  varName: "--bg-gradient-from" },
+			{ group: "ui",       label: "Fond (gradient 2)",  varName: "--bg-gradient-to" },
+			{ group: "ui",       label: "Panneau",            varName: "--panel" },
+			{ group: "ui",       label: "Panneau (léger)",    varName: "--panel-muted" },
+			{ group: "ui",       label: "Texte",              varName: "--text" },
+			{ group: "ui",       label: "Texte (soft)",       varName: "--text-soft" },
+			{ group: "ui",       label: "Bordures",           varName: "--border" },
 
-        function openThemeModal() {
-            const modal = document.getElementById('themeModal');
-            if (!modal) {
-                console.error('Theme modal not found');
-                return;
-            }
-            modal.classList.add('show');
-        }
+			{ group: "progress", label: "Connu",              varName: "--known" },
+			{ group: "progress", label: "Partiel",            varName: "--partial" },
+			{ group: "progress", label: "Inconnu",            varName: "--unknown" },
+			{ group: "progress", label: "Danger",             varName: "--danger" },
+		];
 
-        function closeThemeModal() {
-            document.getElementById('themeModal').classList.remove('show');
-        }
+		const THEME_PRESETS = [
+			{
+				name: "Violet",
+				vars: {
+					"--bg-gradient-from": "#667eea",
+					"--bg-gradient-to": "#764ba2",
+					"--primary": "#667eea",
+					"--primary-2": "#764ba2",
+					"--accent": "#11998e",
+					"--accent-2": "#38ef7d",
+					"--danger": "#ff6b6b",
+					"--known": "#38ef7d",
+					"--partial": "#f5a623",
+					"--unknown": "#ff6b6b"
+				}
+			},
+			{
+				name: "Sombre",
+				vars: {
+					"--bg-gradient-from": "#0b0c0f",
+					"--bg-gradient-to": "#14161a",
+					"--panel": "#14161a",
+					"--panel-muted": "#0e1014",
+					"--text": "#e8ecf3",
+					"--text-soft": "#a8b0c3",
+					"--border": "#2a2f39",
+					"--primary": "#5b8cff",
+					"--primary-2": "#3b82f6",
+					"--accent": "#22c55e",
+					"--accent-2": "#16a34a",
+					"--danger": "#ff5c5c",
+					"--known": "#22c55e",
+					"--partial": "#f59e0b",
+					"--unknown": "#ff5c5c"
+				}
+			}
+		];
 
-        function loadTheme() {
-            try {
-                const saved = localStorage.getItem(THEME_KEY);
-                if (!saved) {
-                    return;
-                }
+		function setVar(name, value) {
+			document.documentElement.style.setProperty(name, value);
+		}
 
-                const theme = JSON.parse(saved);
-                Object.entries(theme).forEach(([varName, value]) => {
-                    setVar(varName, value);
-                });
-            } catch (e) {
-                console.warn('Erreur chargement thème:', e);
-            }
-        }
+		function getComputedVar(name) {
+			return getComputedStyle(document.documentElement).getPropertyValue(name).trim();
+		}
+
+		function openThemeModal() {
+			const modal = document.getElementById('themeModal');
+			if (!modal) return;
+
+			modal.classList.add('show');
+			buildThemeUI(); // ✅ important : remplit le modal
+		}
+
+		function closeThemeModal() {
+			const modal = document.getElementById('themeModal');
+			if (modal) modal.classList.remove('show');
+		}
+
+		function buildThemeUI() {
+			// Presets
+			const presetsEl = document.getElementById("themePresets");
+			if (presetsEl) {
+				presetsEl.innerHTML = "";
+				THEME_PRESETS.forEach(p => {
+					const btn = document.createElement("button");
+					btn.className = "preset-btn";
+					btn.type = "button";
+					btn.innerHTML = `
+						<div class="preset-preview" style="background: linear-gradient(135deg, ${p.vars["--bg-gradient-from"]}, ${p.vars["--bg-gradient-to"]});"></div>
+						<div>${p.name}</div>
+					`;
+					btn.onclick = () => {
+						applyThemeObject(p.vars);
+						refreshThemeInputs();
+					};
+					presetsEl.appendChild(btn);
+				});
+			}
+
+			// Sections
+			renderThemeGroup("primaryColors", "primary");
+			renderThemeGroup("interfaceColors", "ui");
+			renderThemeGroup("progressColors", "progress");
+
+			// Import theme handler (si pas déjà branché)
+			const importInput = document.getElementById("themeImportInput");
+			if (importInput && !importInput.dataset.bound) {
+				importInput.dataset.bound = "1";
+				importInput.addEventListener("change", async (e) => {
+					const file = e.target.files?.[0];
+					if (!file) return;
+					const text = await file.text();
+					try {
+						const theme = JSON.parse(text);
+						applyThemeObject(theme);
+						saveTheme();
+						refreshThemeInputs();
+						showNotification("Thème importé ✓", "success");
+					} catch {
+						showNotification("Fichier de thème invalide", "error");
+					}
+					importInput.value = "";
+				});
+			}
+
+			refreshThemeInputs();
+		}
+
+		function renderThemeGroup(containerId, groupName) {
+			const container = document.getElementById(containerId);
+			if (!container) return;
+
+			container.innerHTML = "";
+			THEME_VARS.filter(v => v.group === groupName).forEach(v => {
+				const row = document.createElement("div");
+				row.className = "color-option";
+
+				const current = getComputedVar(v.varName) || "#000000";
+
+				row.innerHTML = `
+					<div class="color-label">
+						<span>${v.label}</span>
+						<code>${v.varName}</code>
+					</div>
+					<div class="color-input-wrapper">
+						<input type="color" data-var="${v.varName}">
+						<input type="text" data-var="${v.varName}" placeholder="#RRGGBB">
+					</div>
+				`;
+
+				const colorInput = row.querySelector('input[type="color"]');
+				const textInput = row.querySelector('input[type="text"]');
+
+				// Valeurs initiales
+				colorInput.value = normalizeToHex(current);
+				textInput.value = normalizeToHex(current);
+
+				colorInput.addEventListener("input", () => {
+					setVar(v.varName, colorInput.value);
+					textInput.value = colorInput.value;
+				});
+
+				textInput.addEventListener("change", () => {
+					const hex = normalizeToHex(textInput.value);
+					setVar(v.varName, hex);
+					colorInput.value = hex;
+					textInput.value = hex;
+				});
+
+				container.appendChild(row);
+			});
+		}
+
+		function normalizeToHex(value) {
+			// attend un "#RRGGBB" ; si autre, on garde mais on évite de crasher
+			if (typeof value !== "string") return "#000000";
+			const v = value.trim();
+			if (/^#[0-9A-Fa-f]{6}$/.test(v)) return v;
+			// Essai : si rgb(...) -> conversion rapide via canvas
+			if (v.startsWith("rgb")) {
+				const m = v.match(/rgba?\((\d+),\s*(\d+),\s*(\d+)/i);
+				if (m) {
+					const r = Number(m[1]).toString(16).padStart(2, "0");
+					const g = Number(m[2]).toString(16).padStart(2, "0");
+					const b = Number(m[3]).toString(16).padStart(2, "0");
+					return `#${r}${g}${b}`;
+				}
+			}
+			return "#000000";
+		}
+
+		function getCurrentThemeObject() {
+			const obj = {};
+			THEME_VARS.forEach(v => {
+				obj[v.varName] = getComputedVar(v.varName);
+			});
+			return obj;
+		}
+
+		function applyThemeObject(themeObj) {
+			if (!themeObj || typeof themeObj !== "object") return;
+			Object.entries(themeObj).forEach(([k, v]) => {
+				if (typeof k === "string" && k.startsWith("--") && typeof v === "string") {
+					setVar(k, v);
+				}
+			});
+		}
+
+		function refreshThemeInputs() {
+			// met à jour les inputs pour refléter les valeurs actuelles
+			document.querySelectorAll('#themeModal input[data-var]').forEach(inp => {
+				const varName = inp.getAttribute("data-var");
+				const current = normalizeToHex(getComputedVar(varName));
+				if (inp.type === "color") inp.value = current;
+				if (inp.type === "text") inp.value = current;
+			});
+		}
+
+		function saveTheme() {
+			try {
+				const theme = getCurrentThemeObject();
+				localStorage.setItem(THEME_KEY, JSON.stringify(theme));
+				showNotification("Thème enregistré ✓", "success");
+			} catch (e) {
+				showNotification("Erreur lors de l'enregistrement du thème", "error");
+			}
+		}
+
+		function resetTheme() {
+			localStorage.removeItem(THEME_KEY);
+			location.reload(); // simple et fiable : on revient au CSS par défaut
+		}
+
+		function exportTheme() {
+			const theme = getCurrentThemeObject();
+			const blob = new Blob([JSON.stringify(theme, null, 2)], { type: "application/json" });
+			const url = URL.createObjectURL(blob);
+			const a = document.createElement("a");
+			a.href = url;
+			a.download = `flashcards_theme_${new Date().toISOString().slice(0,10)}.json`;
+			document.body.appendChild(a);
+			a.click();
+			document.body.removeChild(a);
+			URL.revokeObjectURL(url);
+			showNotification("Thème exporté ✓", "success");
+		}
 
         // ====== FONCTIONS DU COMPARATEUR ======
         function openComparator() {
