--- a/index.html
+++ b/index.html
@@ -3249,6 +3249,10 @@
             document.getElementById('cardSection').style.display = 'none';
             document.getElementById('endSection').style.display = 'block';
 
+			// ✅ Barre de progression : pleine quand la session est terminée
+			const pf = document.getElementById('progress-fill');
+			if (pf) [pf.style](http://pf.style).width = '100%';
+
             const cards = categories[currentCategory][currentFolder][currentList];
             const listResults = results[currentCategory]?.[currentFolder]?.[currentList] || {};
 
