--- a/index.html
+++ b/index.html
@@ -3251,7 +3251,7 @@
 
 			// ✅ Barre de progression : pleine quand la session est terminée
 			const pf = document.getElementById('progress-fill');
-			if (pf) [pf.style](http://pf.style).width = '100%';
+			if (pf) pf.style.width = '100%';
 
             const cards = categories[currentCategory][currentFolder][currentList];
             const listResults = results[currentCategory]?.[currentFolder]?.[currentList] || {};
