--- a/index.html
+++ b/index.html
@@ -2057,7 +2057,7 @@
         window.activeImportanceFilter = [];
         window.currentImportance = 'normal';
 
-        const GIF_KNOWN_URL = 'https://media.giphy.com/media/111ebonMs90YLu/giphy.gif';
+        const GIF_KNOWN_URL = 'https://www.gif-vif.com/trending/cursed-mario-cursed';
 
         // ====== FONCTIONS D'AUTHENTIFICATION ======
         function login() {
