--- a/index.html
+++ b/index.html
@@ -3208,6 +3208,11 @@
             loadManagePage();
         }
 
+		function goHome() {
+			currentPage = 'home';
+			showPage('home');
+		}
+
         // ====== FONCTIONS POUR LE MODE ÉTUDE ======
         function showStudyPage(catName, folderName, listName) {
             currentCategory = catName;
