--- a/index.html
+++ b/index.html
@@ -318,6 +318,21 @@
         .btn-delete-list { color: var(--danger); }
         .btn-delete-list:hover { background: var(--danger); color: white; }
         .btn-new-list { background: linear-gradient(135deg, var(--primary) 0%, var(--primary-2) 100%); color: white; padding: 15px 30px; border: none; border-radius: 10px; font-size: 16px; font-weight: 600; cursor: pointer; transition: all 0.3s; width: 100%; }
+		.page-header .btn,
+		.lists-page-header .btn {
+			background: rgba(255, 255, 255, 0.92);
+			color: #111827;            /* texte bien foncé */
+			border: 2px solid rgba(17, 24, 39, 0.25);
+			font-weight: 800;
+			box-shadow: 0 10px 24px rgba(0,0,0,0.18);
+		}
+
+		.page-header .btn:hover,
+		.lists-page-header .btn:hover {
+			background: #ffffff;
+			border-color: rgba(17, 24, 39, 0.45);
+			transform: translateY(-1px);
+		}
 
         .manage-cards-page h2 { color: var(--text); margin-bottom: 10px; font-size: 28px; }
         .breadcrumb { color: var(--text-soft); font-size: 14px; margin-bottom: 20px; display: flex; align-items: center; gap: 8px; }
@@ -397,6 +412,44 @@
         .card-back { transform: rotateY(180deg); }
         .card-text { font-size: 24px; color: var(--text); font-weight: 500; line-height: 1.5; width: 100%; text-align: center; }
         .card-text img { max-width: 100%; height: auto; display: inline-block; margin: 5px; border-radius: 8px; vertical-align: middle; }
+		.container {
+			max-width: none !important;
+			width: 100% !important;
+			padding-left: 24px;
+			padding-right: 24px;
+		}
+
+		.quick-actions,
+		.quick-actions-bar {
+			width: 100% !important;
+		}
+
+		.quick-actions .btn-action,
+		.quick-actions .btn-action-secondary,
+		.quick-actions .btn-export-all {
+			flex: 1;
+			min-width: 0;
+		}
+
+		.course-list {
+			width: 100% !important;
+		}
+
+		.course-card {
+			width: 100% !important;
+		}
+		.main-content {
+			max-width: none !important;
+			width: 100% !important;
+		}
+		
+		.container {
+			max-width: none !important;
+			width: 100% !important;
+		}
+
+		.quick-actions { width: 100% !important; }
+		.course-list, .course-card { width: 100% !important; }
 
         .buttons { display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; }
         button { padding: 15px 30px; border: none; border-radius: 10px; font-size: 16px; font-weight: 600; cursor: pointer; transition: all 0.3s ease; color: white; flex: 1; min-width: 150px; }
