--- a/index.html
+++ b/index.html
@@ -1428,6 +1428,18 @@
 			max-width: none !important;
 			box-sizing: border-box;
 		}
+		/* Page catégorie + conteneur des cours : pleine largeur */
+		#categoryPage,
+		#categoryCoursesList {
+			width: 100% !important;
+			max-width: none !important;
+			box-sizing: border-box;
+		}
+
+/* Les cartes à l'intérieur */
+		#categoryCoursesList .course-card {
+			width: 100% !important;
+		}
     </style>
 </head>
 <body onload="checkAuth()">
