--- a/index.html
+++ b/index.html
@@ -1436,9 +1436,31 @@
 			box-sizing: border-box;
 		}
 
-/* Les cartes à l'intérieur */
-		#categoryCoursesList .course-card {
-			width: 100% !important;
+		#toggleSidebarBtn.toggle-sidebar-btn {
+			width: 16px !important;
+			height: 24px !important;
+			padding: 0 !important;
+			border-radius: 8px !important;
+		}
+
+		#toggleSidebarBtn.toggle-sidebar-btn {
+			font-size: 14px !important;
+			line-height: 1 !important;
+		}
+
+		#toggleSidebarBtn.toggle-sidebar-btn svg {
+			width: 12px !important;
+			height: 12px !important;
+		}
+		
+		button#toggleSidebarBtn {
+			flex: 0 0 auto !important;
+			width: 24px !important;       /* <- largeur */
+			height: 24px !important;
+			min-width: 24px !important;
+			max-width: 24px !important;
+			flex-basis: 24px !important;
+			padding: 0 !important;
 		}
     </style>
 </head>
