--- a/index.html
+++ b/index.html
@@ -3127,7 +3127,7 @@
 
                 let progressHTML = '';
                 if (toReviewCount > 0) {
-                    progressHTML = '<div class="list-card-progress">🔄 ' + toReviewCount + ' à revoir</div>';
+                    progressHTML = `<div class="list-card-progress">🔄 ${reviewCount} à revoir</div>`
                 }
 
                 card.innerHTML = `
