--- a/index.html
+++ b/index.html
@@ -3170,8 +3170,8 @@
 // désactive si rien à revoir
 				if (reviewIndices.length === 0) {
 					btnReview.disabled = true;
-					[btnReview.style](http://btnReview.style).opacity = '0.5';
-					[btnReview.style](http://btnReview.style).cursor = 'not-allowed';
+					btnReview.style.opacity = '0.5';
+					btnReview.style.cursor = 'not-allowed';
 				}
                 card.appendChild(buttonsDiv);
                 container.appendChild(card);
