--- a/index.html
+++ b/index.html
@@ -3638,6 +3638,7 @@
                 document.getElementById('resultGifImg').src = GIF_KNOWN_URL;
                 document.getElementById('resultGif').classList.add('show');
             }
+			loadListsPage();
         }
 
         function editCurrentCard() {
