--- a/index.html
+++ b/index.html
@@ -1800,6 +1800,8 @@
                                 <button class="btn-action btn-action-secondary" onclick="showImportTextModal()">📋 Importer (Texte/CSV)</button>
                                 <button class="btn-action btn-action-secondary" onclick="importCards()">📥 Restaurer (JSON)</button>
                                 <button class="btn-export-all" onclick="exportAll()">📦 Exporter tout</button>
+								<button class="btn-list-action" onclick="restartCurrentList()">↩︎ Revoir la liste</button>
+								<button class="btn-list-action" onclick="goToNextListInFolder()">⏭ Liste suivante</button>
                             </div>
                             <div id="resultGif" class="result-gif"><img id="resultGifImg" src="" alt="Bravo !"></div>
                         </div>
